--- a/TicketShow/templates/index.html
+++ b/TicketShow/templates/index.html
@@ -55,7 +55,7 @@
     </div>
   </div>
   <footer class="container-fluid text-center">
-    <p>Made with ❤ By Souvik Choudhury</p>
+    <p>Made with ❤ By Sagnik Banerjee</p>
   </footer>
 </body>
 </html>
